# customer_churn

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  churn_notebook.ipynb  churn_script_logging_and_tests.py  pyproject.toml
churn_library_solution/: __init__.py  churn_library.py
churn_library_solution/conf/: config.py  constants.py
