[tool.poetry]
name = "churn_library_solution"
version = "0.1.0"
description = "customer churn udaicity"
authors = ["Diego <diegofg293@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.7,<3.10"
shap = "0.35"
scikit-learn = "0.24.1"
pandas = "1.1.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
joblib = "^1.1.0"
rich = "^10.12.0"
pretty-errors = "^1.2.24"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
autopep8 = "^1.5.7"
isort = "^5.9.3"
jupyter = "^1.0.0"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = "^21.9b0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


	# Black formatting
[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true
virtual_env = "venv"


# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --disable-pytest-warnings"
markers = [
    "training: tests that involve training",
]